<resources>
    <string name="app_name">AppDivisasKotlinBasico</string>
    <string name="resultado">Resultado:</string>
    <string name="convertir_a_usd">Convertir a USD</string>
    <string name="conversor_api_divisas">Conversor API Divisas</string>
    <string name="monto_clp">Monto CLP</string>
    <string name="ir_activity_async">Ir Activity Async</string>
    <string name="ir_activity_main">Ir Activity Main</string>
    <string name="ir_activity_retrofit">Ir Activity Retrofit</string>
    <string name="salir">Salir</string>
</resources>